# PyBNCore

./: .gitignore  LICENSE  skills.md
bncore/: .gitignore  CMakeLists.txt  DEVELOPMENT_PLAN.md  LICENSE  README.md  pyproject.toml  solver_algorithm.md.resolved
bncore/benchmarks/: .pybncore_epistemic_time.txt  adapter.py  bench_dd.py  bench_dsep_ab.py  bench_optimized.py  benchmark_epistemic.py  benchmark_pybncore_point.cpp  benchmark_smile  benchmark_smile.cpp  benchmark_smile_epistemic  benchmark_smile_epistemic.cpp  benchmark_smile_vector  benchmark_smile_vector.cpp  benchmark_vectorized.py  generate_networks.py  generate_report.py  generate_scenarios.py  plot_benchmarks.py  pybncore_bench_full.py  pybncore_native_bench.cpp  run_benchmarks.py  run_epistemic_validation.py  run_point_vs_pgmpy.py  run_smile_vs_pybncore.py  smile_bench_full  smile_bench_full.cpp  test_correctness.py  test_epistemic_correctness.py
bncore/benchmarks/data/: bench_opt_100n.xdsl  bench_opt_200n.xdsl  bench_opt_50n.xdsl  bench_test.xdsl  benchmark_epistemic.xdsl  benchmark_perf.xdsl  benchmark_perf_unified.xdsl  benchmark_vectorized_evidence.csv  correctness_test.xdsl  net_050n.xdsl  net_050n_dense.jsonl  net_050n_medium.jsonl  net_050n_sparse.jsonl  net_100n.xdsl  net_100n_dense.jsonl  net_100n_medium.jsonl  net_100n_sparse.jsonl  net_200n.xdsl  net_200n_dense.jsonl  net_200n_medium.jsonl  net_200n_sparse.jsonl  net_500n.xdsl  net_500n_dense.jsonl  net_500n_medium.jsonl  net_500n_sparse.jsonl
bncore/docs/: GUI_IMPLEMENTATION_PLAN.md  GUI_prompt.md  Skills.md  dd_tutorial.md  pybncore_technical_report.tex
bncore/examples/: 01_hello_discrete.py  02_sensitivity_and_voi.py  03_hybrid_gaussian_chain.py  04_reliability_rare_event.py  05_diagnostic_with_soft_evidence.py  mock.xdsl  test_api.py  test_batch.py  test_discretization.py  test_xdsl.py
bncore/include/bncore/discretization/: cpd_integrator.hpp  manager.hpp
bncore/include/bncore/factors/: dense_tensor.hpp  factor.hpp
bncore/include/bncore/graph/: graph.hpp  node.hpp
bncore/include/bncore/inference/: compiler.hpp  engine.hpp  hybrid_engine.hpp  junction_tree.hpp  workspace.hpp
bncore/include/bncore/util/: bump_allocator.hpp  thread_pool.hpp
bncore/packaging/: pybncore_gui.spec
bncore/pybncore/: __init__.py  _hybrid.py  io.py  loopy_bp.py  posterior.py  wrapper.py
bncore/pybncore_gui/: README.md  __init__.py  __main__.py  app.py
bncore/pybncore_gui/commands/: __init__.py  continuous_commands.py  cpt_commands.py  edge_commands.py  node_commands.py  scenario_commands.py
bncore/pybncore_gui/domain/: __init__.py  continuous.py  errors.py  node.py  project.py  results.py  scenario.py  session.py  settings.py  submodel.py  validation.py
bncore/pybncore_gui/services/: __init__.py  analysis_service.py  authoring_service.py  inference_service.py  io_service.py  model_service.py  submodel_service.py  validation_service.py
bncore/pybncore_gui/viewmodels/: __init__.py  main_viewmodel.py
bncore/pybncore_gui/views/: __init__.py  main_window.py
bncore/pybncore_gui/views/dialogs/: __init__.py  add_node_dialog.py  continuous_node_dialog.py  edit_states_dialog.py  engine_settings_dialog.py  equation_node_dialog.py  noisy_max_wizard.py  (+2 more)
bncore/pybncore_gui/workers/: __init__.py  analysis_workers.py  base_worker.py  batch_worker.py  benchmark_worker.py  compile_worker.py  hybrid_worker.py  load_model_worker.py  map_worker.py  monte_carlo_worker.py  query_worker.py
bncore/skills/: README.md
bncore/skills/code-standards/: SKILL.md
bncore/skills/graph-editor/: SKILL.md
bncore/skills/gui-architecture/: SKILL.md
bncore/skills/hybrid-continuous/: SKILL.md
bncore/skills/pybncore-integration/: SKILL.md
bncore/skills/pyside-gui/: SKILL.md
bncore/skills/qt-workers/: SKILL.md
bncore/src/: compiler.cpp  cpd_integrator.cpp  dense_tensor.cpp  engine.cpp  factor.cpp  graph.cpp  hybrid_engine.cpp  junction_tree.cpp  manager.cpp  workspace.cpp
bncore/src_python/: main.cpp
bncore/tests/: test_barren_pruning.py  test_batch_uq_regression.py  test_dsep.py  test_dynamic_discretization.py  test_equation.py  test_examples.py  test_loopy_bp.py  test_map_inference.py  test_noisy_max.py  test_posterior.py  test_robustness.py  test_sensitivity.py  test_soft_evidence.py  test_split_state.py  test_voi.py  test_wrapper_hybrid.py
bncore/tests/gui/: conftest.py  test_services.py
(+84 files in other folders)
