[build-system]
requires = ["scikit-build-core", "nanobind"]
build-backend = "scikit_build_core.build"

[project]
name = "pybncore"
version = "0.1.0"
description = "High-performance C++ Bayesian network library"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Akram Batikh", email = "asbatikh@ncsu.edu"}
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24,<2.0",
]

[tool.scikit-build]
wheel.packages = ["pybncore"]
cmake.build-type = "Release"
