[build-system]
requires = ["scikit-build-core", "nanobind"]
build-backend = "scikit_build_core.build"

[project]
name = "pybncore"
version = "0.1.0"
description = "High-performance C++ Bayesian network library"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Akram Batikh", email = "asbatikh@ncsu.edu"}
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24,<2.0",
]

[project.optional-dependencies]
gui = [
    "PySide6>=6.6",
]
dev = [
    "pytest>=7",
    "pytest-qt>=4.4",
]

[project.scripts]
pybncore-gui = "pybncore_gui.app:main"

[tool.scikit-build]
wheel.packages = ["pybncore", "pybncore_gui"]
cmake.build-type = "Release"

[tool.pytest.ini_options]
testpaths = ["tests"]
